--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Frontend Mentor | Bookmark landing page</title>
-    <script src="./main.js" defer type="module"></script>
+    <script src="./dist/main.js" defer type="module"></script>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
@@ -29,7 +29,7 @@
       <div class="eventHamburguer">
         <div class="eventTopHamburguer">
           <div class="eventTop">
-            <img src="../images/logo-bookmark.svg" alt="logo-bookmark">
+            <img src="./images/logo-bookmark.svg" alt="logo-bookmark">
             <p id="closeButton">✖</p>
           </div>
           <div class="eventTopButtons">
@@ -40,15 +40,15 @@
           </div>
         </div>
         <div class="eventFooterIcons">
-          <img src="../images/icon-facebook.svg" alt="facebook">
-          <img src="../images/icon-twitter.svg" alt="twitter">
+          <img src="./images/icon-facebook.svg" alt="facebook">
+          <img src="./images/icon-twitter.svg" alt="twitter">
         </div>
       </div>
     </div>
     <main>
       <header class="header">
         <div class="left-header">
-          <img src="../images/logo-bookmark.svg" alt="bookmark"/>
+          <img src="./images/logo-bookmark.svg" alt="bookmark"/>
         </div>
         <div class="right-header">
           <button class="btn-header">FEATURES</button>
@@ -59,10 +59,10 @@
       </header>
       <div class="headerHamburguer" id="headerHamburguerId">
         <div class="leftHeaderHamburguer">
-          <img src="../images/logo-bookmark.svg" alt="bookmark" />
+          <img src="./images/logo-bookmark.svg" alt="bookmark" />
         </div>
         <div class="hamburguer">
-          <img src="../images/icon-hamburger.svg" alt="hamburguer" id="hamburguerId">
+          <img src="./images/icon-hamburger.svg" alt="hamburguer" id="hamburguerId">
         </div>
       </div>
       <section>
@@ -84,7 +84,7 @@
           <div class="right-bm">
             <img
               id="img-ilust"
-              src="../images/illustration-hero.svg"
+              src="./images/illustration-hero.svg"
               alt="hero"
             />
             <div class="backgroundBlueRigth"></div>
@@ -118,7 +118,7 @@
           <div class="divLeftEvent">
             <img
               id="imgLeftEvent"
-              src="../images/illustration-features-tab-1.svg"
+              src="./images/illustration-features-tab-1.svg"
               alt=""
             />
             <div class="backgroundBlueleft"></div>
@@ -143,30 +143,30 @@
             <div class="cards">
               <img
                 class="imgCards"
-                src="../images/logo-chrome.svg"
+                src="./images/logo-chrome.svg"
                 alt="Chrome"
               />
               <p class="titleCards"><strong>Add to Chrome</strong></p>
               <p class="textCards">Minimum version 62</p>
-              <img class="dots" src="../images/bg-dots.svg" alt="dots" />
+              <img class="dots" src="./images/bg-dots.svg" alt="dots" />
               <button class="btnCards">Add & Install extension</button>
             </div>
             <div class="cards" id="secondCard">
               <img
                 class="imgCards"
-                src="../images/logo-firefox.svg"
+                src="./images/logo-firefox.svg"
                 alt="Firefox"
               />
               <p class="titleCards"><strong>Add to Firefox</strong></p>
               <p class="textCards">Minimum version 55</p>
-              <img class="dots" src="../images/bg-dots.svg" alt="dots" />
+              <img class="dots" src="./images/bg-dots.svg" alt="dots" />
               <button class="btnCards">Add & Install extension</button>
             </div>
             <div class="cards" id="thirdCard">
-              <img class="imgCards" src="../images/logo-opera.svg" alt="Opera" />
+              <img class="imgCards" src="./images/logo-opera.svg" alt="Opera" />
               <p class="titleCards"><strong>Add to Opera</strong></p>
               <p class="textCards">Minimum version 46</p>
-              <img class="dots" src="../images/bg-dots.svg" alt="dots" />
+              <img class="dots" src="./images/bg-dots.svg" alt="dots" />
               <button class="btnCards">Add & Install extension</button>
             </div>
           </div>
@@ -187,10 +187,10 @@
                   <img
                   class="leftArrow"
                   id="firstArrowLeft"
-                  src="../images/icon-arrow.png"
+                  src="./images/icon-arrow.png"
                   alt="arrow"
                 />
-                <img  class="rigthArrow" id="firstArrowRigth" src="../images/arrow-activated.png"/>
+                <img  class="rigthArrow" id="firstArrowRigth" src="./images/arrow-activated.png"/>
                 </div>
               </button>
             </div>
@@ -203,10 +203,10 @@
                   <img
                   class="leftArrow"
                   id="secondArrowLeft"
-                  src="../images/icon-arrow.png"
+                  src="./images/icon-arrow.png"
                   alt="arrow"
                 />
-                <img class="rigthArrow" id="secondArrowRigth" src="../images/arrow-activated.png"/>
+                <img class="rigthArrow" id="secondArrowRigth" src="./images/arrow-activated.png"/>
                 </div>
               </button>
             </div>
@@ -217,10 +217,10 @@
                   <img
                   class="leftArrow"
                   id="thirdArrowLeft"
-                  src="../images/icon-arrow.png"
+                  src="./images/icon-arrow.png"
                   alt="arrow"
                 />
-                <img class="rigthArrow"  id="thirdArrowRigth"src="../images/arrow-activated.png"/>
+                <img class="rigthArrow"  id="thirdArrowRigth"src="./images/arrow-activated.png"/>
                 </div>
               </button>
             </div>
@@ -233,10 +233,10 @@
                   <img
                   class="leftArrow"
                   id="fourthArrowLeft"
-                  src="../images/icon-arrow.png"
+                  src="./images/icon-arrow.png"
                   alt="arrow"
                 />
-                <img class="rigthArrow" id="fourthArrowRigth" src="../images/arrow-activated.png"/>
+                <img class="rigthArrow" id="fourthArrowRigth" src="./images/arrow-activated.png"/>
                 </div>
               </button>
             </div>            
@@ -260,7 +260,7 @@
       <div class="secondContentSecondSection">
         <div class="leftFooter">
           <div class="imgLeftFooter">
-            <img id="imgLeftFooterid" src="../images/logo-bookmark.svg" alt="bookmark">
+            <img id="imgLeftFooterid" src="./images/logo-bookmark.svg" alt="bookmark">
           </div>
         </div>
         <div class="midFooter">
@@ -269,8 +269,8 @@
           <p class="textLeftFooter">Contact</p>
         </div>
         <div class="rigthFooter">
-          <img src="../images/icon-facebook.svg" alt="facebook">
-          <img src="../images/icon-twitter.svg" alt="twitter">
+          <img src="./images/icon-facebook.svg" alt="facebook">
+          <img src="./images/icon-twitter.svg" alt="twitter">
         </div>
       </div>
      <!-- <p class="attribution">
