--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Frontend Mentor | Bookmark landing page</title>
     <script src="./dist/main.js" defer type="module"></script>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
